ri theme firefox scrollbar fix

--- a/styles/root.scss
+++ b/styles/root.scss
@@ -152,8 +152,8 @@
 
 	// Scrollbar Thumb
 	// #0b88b1
-	--ri-scroll: rgba(11, 136, 177,0.7); // blue5 w/ a = 0.7	
-	--ri-scroll-h: rgba(11, 136, 177,0.2);// blue5 w/ a = 0.9
+	--ri-scroll: rgba(11, 136, 177,0.2); // blue5 w/ a = 0.7	
+	--ri-scroll-h: rgba(11, 136, 177,0.7);// blue5 w/ a = 0.9
 	
 	// Navigation Tables
 	--ri-tbl: var(--ri-blue6);
